// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CareCard matches snapshot 1`] = `
<CareCard
  className=""
  disableHiddenText={false}
  heading="TestHeading"
  hiddenText=""
  type="non-urgent"
>
  <div
    className="nhsuk-care-card nhsuk-care-card--non-urgent"
  >
    <div
      className="nhsuk-care-card__heading-container"
    >
      <h3
        className="nhsuk-care-card__heading"
      >
        <span>
          <span
            className="nhsuk-u-visually-hidden"
          >
            Non-urgent advice: 
          </span>
          TestHeading
        </span>
      </h3>
      <span
        aria-hidden="true"
        className="nhsuk-care-card__arrow"
      />
    </div>
    <div
      className="nhsuk-care-card__content"
    >
      Content
    </div>
  </div>
</CareCard>
`;

exports[`CareCard matches snapshot 2`] = `
<CareCard
  className=""
  disableHiddenText={false}
  heading="TestHeading"
  hiddenText=""
  type="urgent"
>
  <div
    className="nhsuk-care-card nhsuk-care-card--urgent"
  >
    <div
      className="nhsuk-care-card__heading-container"
    >
      <h3
        className="nhsuk-care-card__heading"
      >
        <span>
          <span
            className="nhsuk-u-visually-hidden"
          >
            Urgent advice: 
          </span>
          TestHeading
        </span>
      </h3>
      <span
        aria-hidden="true"
        className="nhsuk-care-card__arrow"
      />
    </div>
    <div
      className="nhsuk-care-card__content"
    >
      Content
    </div>
  </div>
</CareCard>
`;

exports[`CareCard matches snapshot 3`] = `
<CareCard
  className=""
  disableHiddenText={false}
  heading="TestHeading"
  hiddenText=""
  type="immediate"
>
  <div
    className="nhsuk-care-card nhsuk-care-card--immediate"
  >
    <div
      className="nhsuk-care-card__heading-container"
    >
      <h3
        className="nhsuk-care-card__heading"
      >
        <span>
          <span
            className="nhsuk-u-visually-hidden"
          >
            Immediate action required: 
          </span>
          TestHeading
        </span>
      </h3>
      <span
        aria-hidden="true"
        className="nhsuk-care-card__arrow"
      />
    </div>
    <div
      className="nhsuk-care-card__content"
    >
      Content
    </div>
  </div>
</CareCard>
`;

exports[`CareCard matches snapshot 4`] = `
<CareCard
  className=""
  disableHiddenText={false}
  heading="TestHeading"
  hiddenText=""
  type="incorrect"
>
  <div
    className="nhsuk-care-card nhsuk-care-card--incorrect"
  >
    <div
      className="nhsuk-care-card__heading-container"
    >
      <h3
        className="nhsuk-care-card__heading"
      >
        <span>
          <span
            className="nhsuk-u-visually-hidden"
          />
          TestHeading
        </span>
      </h3>
      <span
        aria-hidden="true"
        className="nhsuk-care-card__arrow"
      />
    </div>
    <div
      className="nhsuk-care-card__content"
    >
      Content
    </div>
  </div>
</CareCard>
`;

exports[`CareCard matches snapshot 5`] = `
<CareCard
  className=""
  disableHiddenText={true}
  heading="TestHeading"
  hiddenText=""
  type="immediate"
>
  <div
    className="nhsuk-care-card nhsuk-care-card--immediate"
  >
    <div
      className="nhsuk-care-card__heading-container"
    >
      <h3
        className="nhsuk-care-card__heading"
      >
        <span>
          TestHeading
        </span>
      </h3>
      <span
        aria-hidden="true"
        className="nhsuk-care-card__arrow"
      />
    </div>
    <div
      className="nhsuk-care-card__content"
    >
      Content
    </div>
  </div>
</CareCard>
`;

exports[`CareCard matches snapshot 6`] = `
<CareCard
  className=""
  disableHiddenText={false}
  hiddenText="hello"
  type="immediate"
>
  <div
    className="nhsuk-care-card nhsuk-care-card--immediate"
  >
    <div
      className="nhsuk-care-card__heading-container"
    >
      <h3
        className="nhsuk-care-card__heading"
      >
        <span>
          <span
            className="nhsuk-u-visually-hidden"
          >
            hello
          </span>
        </span>
      </h3>
      <span
        aria-hidden="true"
        className="nhsuk-care-card__arrow"
      />
    </div>
    <div
      className="nhsuk-care-card__content"
    >
      Content
    </div>
  </div>
</CareCard>
`;
